--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.0.6",
+    "chevrotain": "^10.5.0",
     "lodash": "^4.17.21",
-    "nearley": "^2.20.1",
     "node-fetch": "^3.2.6",
     "uuid": "^9.0.0"
   }
